Fix overflow

--- a/frontend/src/scenes/notebooks/Nodes/NodeWrapper.scss
+++ b/frontend/src/scenes/notebooks/Nodes/NodeWrapper.scss
@@ -98,11 +98,16 @@
 }
 
 .NotebookNodeTitle {
-    border-radius: var(--radius);
-    transition: background-color 150ms linear;
     padding: 0.25rem;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 
-    &:hover {
-        background-color: var(--border);
+    &--editable {
+        border-radius: var(--radius);
+        transition: background-color 150ms linear;
+        &:hover {
+            background-color: var(--border);
+        }
     }
 }
